--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
     </section>
     
     <footer>
-        <p>Proyecto escolar de <span class="materia">Cultura Digital</span> - 2° Semestre</p>
+         <p>Proyecto escolar de <span class="materia">Cultura Digital</span> - 2° Semestre</p>
         <p>Escuela Cbtis 128</p>
-        <p>Equipo: Audier Villanueva Herrera | Sebastian Almeida Bustillos | Ivan Emiliano Quintana Serrano </p>
+        <p>Equipo: Audier Villanueva Herrera | Sebastian Almeida Bustillos | Ivan Emiliano Quintana Serrano | Alexander Ugalde Santos | Arath Omar Frausto Gómez</p>
         <p>Grupo: [2-E | Turno: [Matutino]</p>
         <p>Año: 2025</p>
     </footer>
