--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         
         <div class="producto">
-                       <img src="t.PNG" alt="Tecnología y educación" width="600">
+                       <img src="t.png" alt="Tecnología y educación" width="600">
             <p class="centro">"La tecnología es solo una herramienta. La gente usa las herramientas para mejorar sus vidas" - Tom Clancy</p>
         </div>
     </section>
